Add inviting organizers and judges
